# TEST_CPP_PYTHON

./: README.md
c/: int_uint.c
cpp/: STL_list_0.cpp  STL_map_0.cpp  STL_set_0.cpp  STL_string_0.cpp  STL_vector_0.cpp  STL_vector_1.cpp  STL_vector_2.cpp  arrary_oneDimension.cpp  arrary_ptr.cpp  arrary_twoDimension_0.cpp  arrary_twoDimension_1.cpp  class_object_0.cpp  class_object_constructor.cpp  class_object_copyConstructor_0.cpp  class_object_copyConstructor_1.cpp  class_object_derivedClass_0.cpp  class_object_derivedClass_1.cpp  class_object_destructor.cpp  class_object_friend.cpp  class_object_inline.cpp  class_object_pointToClass.cpp  class_object_private.cpp  class_object_ptr_this_0.cpp  class_object_ptr_this_1.cpp  class_object_staticMember_0.cpp  class_object_staticMember_1.cpp  compare().cpp  exit().cpp  file.cpp  helloworld.cpp  int_uint.cpp  overload_relationalOperator.cpp  overload_unaryOperator.cpp  overloaded_binaryOperator.cpp  overloaded_function.cpp  overloaded_function_operator.cpp  pointer_0.cpp  pointer_1.cpp  pointer_NULL.cpp  pointer_cal_plus.cpp  (+18 more)
cpp_stl/: adapter  adapter_0.cpp  algorithm_0.cpp
opencv/: CMakeLists.txt  pic.cpp
socket/: CMakeLists.txt
socket/device/: de  device.cpp
socket/host/: ho  host.cpp
socket/show/: show  show.cpp
